--- a/index.html
+++ b/index.html
@@ -57,8 +57,12 @@
     <div id="after"></div>
 </div>
 </div>
-<footer><div id="footer">Adress: via Indipendeza 320, BO <br>
+<div id="bottomPage"><footer><div id="footer">Adress: via Indipendeza 320, BO <br>
     Name: Luna's Shop</div>
 </footer>
+<div id="textArea"><h4>Write us your opinion !</h4>
+<textarea>Write something here...</textarea></div>
+</div>
+
 </body>
 </html>
