Updated version without javascript

--- a/index.html
+++ b/index.html
@@ -8,61 +8,69 @@
     <title>Luna's Beauty Shop</title>
 </head>
 <body>
-    <h1>Luna's Beauty Shop</h1>
-<div id="container">
-    <div id="table">
-    <div id="before"></div>
-     <table>
+<div id="wholePageId">
+    <div id="pageTitle">
+        <h1 id="pageTitleJava">Luna's Shop</h1>
+    </div>
+<div id="tableId">
+    <table>
         <tr id="firstRow">
-        
-            <th>Image</th>
-            <th>Title</th>
-            <th>Description</th>
-            <th class="price">Price</th>
+        <th class="image">Image</th>
+        <th class="title">Title</th>
+        <th class="description">Description</th>
+        <th class="price">Price</th>
+        </tr> 
+        <tr id="secondRow">
+            <td class="image"><img class="image" src="Siero.jpg"/></td>
+            <td class="title"><a  href="https://www.amazon.it/BIO-Ialuronico-Vitamina-Altissima-Qualit%C3%A0/dp/B076611KCY?ref_=Oct_s9_apbd_otopr_hd_bw_b6lSWH1&pf_rd_r=Z04H1YYW3846M3NG6BM9&pf_rd_p=79766695-52b8-5f3c-8d73-0289ecfa8f30&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&pf_rd_i=6198082031"; target="_blank">Florence - Professional Facial Serum</a></td>
+            <td class="description">This serum contains a concentration of low and medium molecolar weight Hyaluronic Acid, which has a moisturising action.
+                Enriched with plant extracts and real BIO organic Aloe Vera with antioxidant, elasticizing, toning and smoothing qualities.</td>
+            <td class="price">14,99€</td>
         </tr>
-        <tr>
-            <th><img src="Siero.jpg"/></th>
-            <th><a href="https://www.amazon.it/BIO-Ialuronico-Vitamina-Altissima-Qualit%C3%A0/dp/B076611KCY?ref_=Oct_s9_apbd_otopr_hd_bw_b6lSWH1&pf_rd_r=Z04H1YYW3846M3NG6BM9&pf_rd_p=79766695-52b8-5f3c-8d73-0289ecfa8f30&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&pf_rd_i=6198082031"; target="_blank">Florence - Professional Facial Serum</a></th>
-            <th>This serum contains a concentration of low and medium molecolar weight Hyaluronic Acid, which has a moisturising action.
-                Enriched with plant extracts and real BIO organic Aloe Vera with antioxidant, elasticizing, toning and smoothing qualities.</th>
-            <th class="price">14,99€</th>
+        <tr id="thirdRow">
+            <td class="image"><img src="correttore.jpg"/></td>
+            <td class="title"><a href="https://www.amazon.it/Maybelline-Correttore-Cancella-Occhiaie-Confezione/dp/B07C9PY9GC?ref_=Oct_s9_apbd_otopr_hd_bw_b6spgBb&pf_rd_r=9X2CKCX551C825P9MH5T&pf_rd_p=679f20a3-c517-5cd9-8856-02cb392fb0c5&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&pf_rd_i=6307036031"; target="_blank">Maybelline New York - Anti-aging liquid concealer</a></td>
+            <td class="description">This liquid concealer helps with concealing under eye circles and skin imperfections.
+                It brightens your complexion and gives you an overall healthy looking skin.</td>
+            <td class="price">5,99 €</td>
         </tr>
-        <tr>
-            <th><img src="correttore.jpg"/></th>
-            <th><a href="https://www.amazon.it/Maybelline-Correttore-Cancella-Occhiaie-Confezione/dp/B07C9PY9GC?ref_=Oct_s9_apbd_otopr_hd_bw_b6spgBb&pf_rd_r=9X2CKCX551C825P9MH5T&pf_rd_p=679f20a3-c517-5cd9-8856-02cb392fb0c5&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&pf_rd_i=6307036031"; target="_blank">Maybelline New York - Anti-aging liquid concealer</a></th>
-            <th>This liquid concealer helps with concealing under eye circles and skin imperfections.
-                It brightens your complexion and gives you an overall healthy looking skin.</th>
-            <th class="price">5,99 €</th>
+        <tr id="fourthRow">
+            <td class="image"><img src="fard.jpg"/></td>
+            <td class="title"><a href="https://www.amazon.it/KIKO-Milano-Unlimited-risultato-modulabile/dp/B07YQD3MWS?ref_=Oct_s9_apbd_orecs_hd_bw_b6spgRj&pf_rd_r=QWVXJKSVWRDM2ZAVZPPD&pf_rd_p=d5072c92-d03b-5254-80b9-f69fd1e8876b&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&pf_rd_i=6307037031"; target="_blank">Kiko Milano - Unlimited Blush 04</a></td>
+            <td class="description">Long-lasting powder blush with a buildable result. Ideal for revitalising the complexion with an irresistible healthy glow. Its handy packaging with compact mirror makes it perfect for on-the-go touch-ups.</td>
+            <td class="price">8,99 €</td>
         </tr>
-        <tr>
-            <th><img src="fard.jpg"/></th>
-            <th><a href="https://www.amazon.it/KIKO-Milano-Unlimited-risultato-modulabile/dp/B07YQD3MWS?ref_=Oct_s9_apbd_orecs_hd_bw_b6spgRj&pf_rd_r=QWVXJKSVWRDM2ZAVZPPD&pf_rd_p=d5072c92-d03b-5254-80b9-f69fd1e8876b&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&pf_rd_i=6307037031"; target="_blank">Kiko Milano - Unlimited Blush 04</a></th>
-            <th>Long-lasting powder blush with a buildable result. Ideal for revitalising the complexion with an irresistible healthy glow. Its handy packaging with compact mirror makes it perfect for on-the-go touch-ups.</th>
-            <th class="price">8,99 €</th>
+        <tr id="fifthRow">
+            <td class="image"><img src="mascara.jpg"/></td>
+            <td class="title"><a href="https://www.amazon.it/Maybelline-Mascara-Volumizzante-Sensazionali-Ventaglio/dp/B016C2APSG?ref_=Oct_s9_apbd_otopr_hd_bw_b6sp6o3&pf_rd_r=9K5SA2GEXNMCYTRMTDGH&pf_rd_p=1114f739-1009-51a7-b0ba-93061b4fc063&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&pf_rd_i=6306900031"; target="_blank">Maybelline New York - Lash Sensational Mascara</a></td>
+            <td class="description">Lash Sensational Mascara unfolds layers of lashes for a sensational full fan effect, thanks to its exclusive fanning brush with ten layers of bristles. This cult-favorite mascara delivers supple, separated lashes that never feel weighed down.</td>
+            <td class="price">7,37 €</td>
         </tr>
-        <tr>
-            <th><img src="mascara.jpg"/></th>
-            <th><a href="https://www.amazon.it/Maybelline-Mascara-Volumizzante-Sensazionali-Ventaglio/dp/B016C2APSG?ref_=Oct_s9_apbd_otopr_hd_bw_b6sp6o3&pf_rd_r=9K5SA2GEXNMCYTRMTDGH&pf_rd_p=1114f739-1009-51a7-b0ba-93061b4fc063&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&pf_rd_i=6306900031"; target="_blank">Maybelline New York - Lash Sensational Mascara</a></th>
-            <th>Lash Sensational Mascara unfolds layers of lashes for a sensational full fan effect, thanks to its exclusive fanning brush with ten layers of bristles. This cult-favorite mascara delivers supple, separated lashes that never feel weighed down.</th>
-            <th class="price">7,37 €</th>
-        </tr>
-        <tr>
-            <th><img src="lucidalabbra.jpg"/></th>
-            <th><a href="https://www.amazon.it/Addict-Lip-Maximizer-rimpolpante-Rosewood/dp/B07MBP6YFP?ref_=Oct_s9_apbd_omg_hd_bw_b6spbVH&pf_rd_r=BH08TM029PKVW0AERN7H&pf_rd_p=a3a4d277-5c50-53d7-95ed-8646bd667e53&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&pf_rd_i=6307018031"; target="_blank">Dior - Addict Lip Maximizer</a></th>
-            <th>The Dior Addict Lip Maximizer lip plumping gloss is a plumping lip care for absolute lip comfort, shine and maximum volume. Enriched with volumizing spheres of hyaluronic acid, the gloss's formula works to smooth and hydrate lips, while producing a plumping effect upon application, and day after day.</th>
-            <th class="price">27,99 €</th>
-        </tr>
-        
+        <tr id="sixthRow">
+            <td class="image"><img src="lucidalabbra.jpg"/></td> 
+            <td class="title"><a href="https://www.amazon.it/Addict-Lip-Maximizer-rimpolpante-Rosewood/dp/B07MBP6YFP?ref_=Oct_s9_apbd_omg_hd_bw_b6spbVH&pf_rd_r=BH08TM029PKVW0AERN7H&pf_rd_p=a3a4d277-5c50-53d7-95ed-8646bd667e53&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&pf_rd_i=6307018031"; target="_blank">Dior - Addict Lip Maximizer</a></td>
+            <td class="description">The Dior Addict Lip Maximizer lip plumping gloss is a plumping lip care for absolute lip comfort, shine and maximum volume. Enriched with volumizing spheres of hyaluronic acid, the gloss's formula works to smooth and hydrate lips, while producing a plumping effect upon application, and day after day.</td>
+            <td class="price">27,99 €</td>
+        </tr>    
     </table>
-    <div id="after"></div>
 </div>
 </div>
-<div id="bottomPage"><footer><div id="footer">Adress: via Indipendeza 320, BO <br>
-    Name: Luna's Shop</div>
-</footer>
-<div id="textArea"><h4>Write us your opinion !</h4>
-<textarea>Write something here...</textarea></div>
+<div id="footerDivision">
+    <div class="writeSomething">
+        <h3>Would you want to recommend other products?</h3>
+        <p id="pOfWriteSomething">Write write something here !</p>
+        <div id="textArea"><textarea></textarea></div>
+        <div id="button"><button>Send</button></div>
+    </div>
+    <div id="javaManipulation">
+        <h2 class="java">Change the aparence of the page!</h2>
+        <p class="java">Try it now, click a button</p>
+        <button onclick="changeH1Content()">Change the title</button>
+    </div>
 </div>
-
+<div class="footerContent">
+<p id="pOfFooter">Copyright© 2021 Luna's Shop Via Enzo Ferrari 12, BO</p>
+</div>
+<script lang="text/javascript" src="index.js"></script>
 </body>
 </html>
